Changes for 1.2.5.3

* fix bug 2979108 Multiplayer LL AA guns Java Error (sgb)

Changes for 1.2.5.2

* fix bug 2977842 Black sea zone movement bug (sgb)

* fixed bug ConcurrentModificationException (sgb)

* low luck air now works according the to the Veqryn rules (sgb)

* validate zip file on map download (sgb)

Changes for 1.2.5.1

* fix bug 2973990 repair rules bug plus new lock not held bug (sgb)

* fix bug 2969991 lock not held bug, 1.2.5.0 (sgb)

* fix bug 2970332 low luck aa casualties don't work when movement varies (sgb)

* fix bug 2971204 moore AI out of bounds exception when no transport rules (sgb)

* partial fix for bug (2971193) to-hit of 6 causes dump- need to revisit when moving to Dx (ComradeKev)

* Re-fix bug (2965453) convoy centers/routes with original owners (ComradeKev)

Changes for 1.2.5

* Re-added Japanese_fade.png flag file for use as kamikaze markers in Pacific (ComradeKev)

* Fix bug (2965453) occupiedTerritoryOf doesn't work with Convoy Centers (ComradeKev)

* Add new isTransportAndNotDestroyer match so DDs that can transport don't fall into normal transport rules (ComradeKev)

* Fix bug(2961038) Can transport armor or more than transportCapacity on bomber with paratroops (ComradeKev)

* fix bug stack overflow in NWO 1.7.7 on Hard AI (sgb)

* updated german, italian and neutral flags (Veqryn)

* better packaged windows icon file (Veqryn)

* fix bug 2964947, minimap AI error (sgb)

* allow choosing aa casualty option to work with low luck (sgb)

* fix crash where unloading attacking transports to allied nations when a defending transport was present and the allied transport dies in the battle (sgb)

* fix crash with unloading units to multiple allied territories and multiple transports die (sgb)

* fix low luck aa casualty selection when different plane types are present (sgb)

Changes for 1.2.4

* fix bug (2960696) Strategic Bombing Crash in 1.2.3.0 (sgb)

* fix bug 2961673 crash in strong ai (sgb)

* fix bug 2943370, lock not held (sgb)